<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">H9</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="user_input_hint">帐号</string>
    <string name="psw_inpit_hint">密码</string>
    <string name="remPsw_text">记住密码</string>
    <string name="autoLogin_text">自动登录</string>
    <string name="loginBtn_text">登录</string>
    <string name="copyright">华盖科技 版权所有</string>

    <string name="url_error_toast">输入的网络地址不合法，请重新输入</string>
    <string name="exit_hint">再按一次退出程序</string>



</resources>
