<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"
              android:gravity="center|bottom"
              android:orientation="horizontal"
              android:weightSum="4">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_input_hint"/>

        <EditText
            android:id="@+id/psw_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw_inpit_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/isRemPsw_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remPsw_text"/>

            <CheckBox
                android:id="@+id/isAutoLogin_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoLogin_text"/>

        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@drawable/login_ip_set"
                android:id="@+id/ipSetting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>